--- a/.config/hypr/conf/keybinds.conf
+++ b/.config/hypr/conf/keybinds.conf
@@ -1,22 +1,45 @@
 #----------------------------------------
 # Keybinds Configuration
+#
+# See https://wiki.hyprland.org/Configuring/Binds
+#   or https://wiki.hyprland.org/hyprland-wiki/pages/Configuring/Advanced-config/#binds
 #----------------------------------------
 
 # Set programs that you use
-$terminal = kitty
-$fileManager = nautilus
-$menu = fuzzel
+$terminal       = kitty
+$fileManager    = nautilus
+$menu           = fuzzel
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
+# Set Mods
+$mainMod    = SUPER
+$ctrlMod    = $mainMod CTRL
+$shiftMod   = $mainMod SHIFT
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exit,
-bind = $mainMod, C, killactive,
-bind = $mainMod, X, exec, $terminal
-bind = $mainMod, E, exec, $fileManager
+# Audio binds
+bindl  = , XF86AudioMute,           exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindle = , XF86AudioRaiseVolume,    exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindle = , XF86AudioLowerVolume,    exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+
+# Media binds
+bindl = , XF86AudioPlay, exec, playerctl play-pause
+#bindl = , XF86AudioStop, exec, playerctl
+bindl = , XF86AudioPrev, exec, playerctl previous
+bindl = , XF86AudioNext, exec, playerctl next
+
+# bind = $mainMod, Q, exit,
+# bind = $mainMod, C, killactive,
+
+# Desktop application binds
+# TODO:
+bindr = $mainMod, SUPER_L,  exec, pkill $menu || $menu
+bind  = $mainMod, X,        exec, $terminal
+bind  = $mainMod, F,        exec, $fileManager
+# bind  = $mainMod, B,        exec, ...
+# bind  = $mainMod, D,        exec, ...
+# bind  = $mainMod, C,        exec, ...
+bind  = $mainMod, S,        exec, steam
+
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -26,37 +49,35 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+# Switch workspaces w/ SUPER CTRL
+bind = $ctrlMod, up,   workspace, e-1
+bind = $ctrlMod, down, workspace, e+1
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $ctrlMod, 1, workspace, 1
+bind = $ctrlMod, 2, workspace, 2
+bind = $ctrlMod, 3, workspace, 3
+bind = $ctrlMod, 4, workspace, 4
+bind = $ctrlMod, 5, workspace, 5
+bind = $ctrlMod, 6, workspace, 6
+bind = $ctrlMod, 7, workspace, 7
+bind = $ctrlMod, 8, workspace, 8
+bind = $ctrlMod, 9, workspace, 9
+bind = $ctrlMod, 0, workspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# Move active window to a workspace w/ SUPER Shift
+bind = $shiftMod, up,   movetoworkspace, e-1
+bind = $shiftMod, down, movetoworkspace, e+1
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $shiftMod, 1, movetoworkspace, 1
+bind = $shiftMod, 2, movetoworkspace, 2
+bind = $shiftMod, 3, movetoworkspace, 3
+bind = $shiftMod, 4, movetoworkspace, 4
+bind = $shiftMod, 5, movetoworkspace, 5
+bind = $shiftMod, 6, movetoworkspace, 6
+bind = $shiftMod, 7, movetoworkspace, 7
+bind = $shiftMod, 8, movetoworkspace, 8
+bind = $shiftMod, 9, movetoworkspace, 9
+bind = $shiftMod, 0, movetoworkspace, 10
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
