update and add clang formating

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@
 monitor=,preferred,auto,auto
 
 # Autostarts Configuration
-# source = ~/.config/hypr/conf/autostarts.conf
+source = ~/.config/hypr/conf/autostarts.conf
 
 # Environment Variables
 source = ~/.config/hypr/conf/environments/default.conf
