--- a/.config/hypr/conf/keybinds.conf
+++ b/.config/hypr/conf/keybinds.conf
@@ -33,10 +33,11 @@ bindl = , XF86AudioNext, exec, playerctl next
 # TODO:
 bindr = $mainMod, SUPER_L,  exec, pkill $menu || $menu
 bind  = $mainMod, X,        exec, $terminal
+bind  = $mainMod, N,        exec, $terminal -e nvim
 bind  = $mainMod, F,        exec, $fileManager
-# bind  = $mainMod, B,        exec, ...
-# bind  = $mainMod, D,        exec, ...
-# bind  = $mainMod, C,        exec, ...
+bind  = $mainMod, B,        exec, flatpak run org.mozilla.firefox
+bind  = $mainMod, D,        exec, flatpak run com.discordapp.Discord
+bind  = $mainMod, C,        exec, gnome-calculator
 bind  = $mainMod, S,        exec, steam
 
 bind = $mainMod, V, togglefloating,
